docs/deployment/overlays/5-namespaced-hpa-app-ns/skipper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngingx-to-skipper-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-read-timeout: "420"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "420"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-name: rout
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: shinyproxy-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: skipper-ingress
            port:
              name: http
